[tool.poetry]
name = "python-angularbook-flask-api"
version = "0.1.0"
description = "Python AngularBook Flask API"
authors = ["Anderson F Lima <andersonfaustinolima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
